# Fractal

./: .gitignore  Cargo.toml  ISSUES.md  README.md  TODO.md  codegen.rs  constants.fr  decisions  decisions.txt  jnlml  jnlml.debug-meta  jnlml.fr  jnlml.rs  lexer.rs  main  main.fr  main.rs  math.fr  out.txt  output  output.asm  parser.rs  preprocessor.rs  semanter.rs  setup.sh  simple.fr  test.fr  test.ne  ui.rs  utils.fr
.github/workflows/: release.yml
documents/: GRAMMAR.md  decisions.txt
executable/: fractal-compiler  install.sh  uninstall.sh
src/: lib.rs
src/compiler/: GRAMMAR.md  builtins.rs  codegen.rs  first_follow.rs  first_follow_saved.rs  generated_parser.rs  grammar.md  grammar.rs  lexer.rs  mod.rs  parser.rs  preprocessor.rs  retcheck.rs  semanter.rs
src/files/: armstrong  armstrong.debug-meta  armstrong.debug.jsonl  armstrong.fr  armstrong.rs  bst  bst.fr  bubblesort.fr  constants  constants.fr  constants.rs  dataStructures.fr  dijkstra.debug-meta  dijkstra.fr  dijkstra.rs  docs.fr  errors.fr  file1  file1.debug-meta  file1.debug.jsonl  file1.fr  file1.rs  graph.fr  helper.fr  main.fr  main.rs  math.fr  math.rs  matmul.fr  mergeSort.fr  mergeSort.rs  operatorTest.fr  operatorTest.rs  operator_test.fr  palindrome  palindrome.debug-meta  palindrome.debug.jsonl  palindrome.fr  palindrome.rs  poly.fr  (+15 more)
src/ui/: Cargo.toml  close_confirm.rs  debugger.rs  docs.rs  editor.rs  file_dialog.rs  formatter.rs  highlighter.rs  icons.rs  menu_bar.rs  mod.rs  search_bar.rs  tab.rs  terminal.rs  theme.rs  tree_view.rs  (+2 more)
ui/: editor.rs  file_dialog.rs  highlighter.rs  theme.rs
web/: package-lock.json  package.json  vercel.json
(+15 files in other folders)
