[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
egui-phosphor = { version = "0.7", features = ["regular"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
