[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "x11", "wayland"] }
egui = "0.33"
egui_term = { git = "https://github.com/Harzu/egui_term", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
egui-phosphor = { version = "0.11", features = ["regular"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
